worker-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app-deployment
  labels:
    app: demo-voting-app
  namespace: voting
spec:
  replicas: 1
  selector:
    matchLabels:
      name: worker-app-pod
      app: demo-voting-app
  template:
    metadata:
      name: worker-app-pod
      labels:
        name: worker-app-pod
        app: demo-voting-app
    spec:
      containers:
      - name: worker-app
        image: dockersamples/examplevotingapp_worker
        resources:
            limits:
              cpu: 550m
              memory: 200Mi
            requests:
              cpu: 450m
              memory: 100Mi
