result-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: result-ingress
  namespace: voting
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - result.kubepfe.com
    secretName: result-cert
  rules:
  - host: result.kubepfe.com
    http:
      paths:
        - path: /
          backend:
                serviceName: result-service
                servicePort: 80
