voting-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: voting-ingress
  namespace: voting
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - voting.kubepfe.com
    secretName: voting-cert
  rules:
  - host: voting.kubepfe.com
    http:
      paths:
        - path: /
          backend:
                serviceName: voting-service
                servicePort: 80
